--- a/pages/1788.html
+++ b/pages/1788.html
@@ -305,10 +305,46 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <p><span class='newWikiWord'>some_picture.png<a href='/nlab/files/some_picture.png'>?</a></span></p>
+      <p>This implies in particular that</p>
+
+<p><strong>higher super <a class='existingWikiWord' href='/nlab/show/Lie+integration'>Lie integration</a> preserves <a class='existingWikiWord' href='/nlab/show/homotopy+fiber+sequences'>homotopy fiber sequences</a></strong></p>
+
+<p><math class='maruku-mathml' display='inline' id='mathml_d95f9c6e6ecdbdcc462d4d9425333f2764ff8131_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAAAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAAAA}</annotation></semantics></math>hence in particular <a class='existingWikiWord' href='/nlab/show/higher+central+extensions'>higher central extensions</a></p>
+
+<p><math class='maruku-mathml' display='inline' id='mathml_d95f9c6e6ecdbdcc462d4d9425333f2764ff8131_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mphantom><mi>AAAA</mi></mphantom></mrow><annotation encoding='application/x-tex'>\phantom{AAAA}</annotation></semantics></math><math class='maruku-mathml' display='inline' id='mathml_d95f9c6e6ecdbdcc462d4d9425333f2764ff8131_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mi>Super</mi><msub><mi>L</mi> <mn>∞</mn></msub><mi>Algebras</mi></mtd> <mtd></mtd> <mtd><mi>SuperSpaces</mi></mtd></mtr> <mtr><mtd><mrow><mtable><mtr><mtd><mover><mi>𝔤</mi><mo>^</mo></mover></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><mi>hofib</mi><mo stretchy='false'>(</mo><msub><mi>μ</mi> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub><mo stretchy='false'>)</mo></mrow></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd></mtr> <mtr><mtd><mi>𝔤</mi></mtd> <mtd><mover><mo>⟶</mo><mrow><msub><mi>μ</mi> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub></mrow></mover></mtd> <mtd><msup><mi>B</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>ℝ</mi></mtd></mtr></mtable></mrow></mtd> <mtd><mphantom><mi>AAAA</mi></mphantom><mover><mo>↦</mo><mrow><mi>Spec</mi><mo maxsize='1.2em' minsize='1.2em'>(</mo><mi>CE</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo maxsize='1.2em' minsize='1.2em'>)</mo></mrow></mover><mphantom><mi>AAAA</mi></mphantom></mtd> <mtd><mrow><mtable><mtr><mtd><mstyle mathvariant='bold'><mi>B</mi></mstyle><mover><mi>G</mi><mo>^</mo></mover></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><mi>hofib</mi><mo stretchy='false'>(</mo><msub><mstyle mathvariant='bold'><mi>c</mi></mstyle> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub><mo stretchy='false'>)</mo></mrow></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd></mtr> <mtr><mtd><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>G</mi></mtd> <mtd><mover><mo>⟶</mo><mrow><msub><mstyle mathvariant='bold'><mi>c</mi></mstyle> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msub></mrow></mover></mtd> <mtd><msup><mstyle mathvariant='bold'><mi>B</mi></mstyle> <mrow><mi>p</mi><mo>+</mo><mn>2</mn></mrow></msup><mi>ℝ</mi></mtd></mtr></mtable></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \array{
+  Super L_\infty Algebras &amp;&amp; SuperSpaces
+  \\
+  \array{
+    \widehat{\mathfrak{g}}
+    \\
+    {}^{\mathllap{hofib(\mu_{p+2})}}\Big\downarrow
+    \\
+    \mathfrak{g}
+    &amp;\overset{ \mu_{p+2} }{\longrightarrow}&amp;
+    B^{p+1} \mathbb{R}
+  }
+  &amp;
+  \phantom{AAAA}
+  \overset{ Spec\big(CE(-)\big) }{\mapsto}
+  \phantom{AAAA}
+  &amp;
+  \array{
+    \mathbf{B} \widehat{G}
+    \\
+    {}^{\mathllap{hofib(\mathbf{c}_{p+2})}}\Big\downarrow
+    \\
+    \mathbf{B}G
+    &amp;\overset{ \mathbf{c}_{p+2} }{\longrightarrow}&amp;
+    \mathbf{B}^{p+2} \mathbb{R}
+  }
+  }
+</annotation></semantics></math></p>
 
 <p><span class='newWikiWord'>some_picture.png<a href='/nlab/files/some_picture.png'>?</a></span></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_959ae3bae1e6ff9583e5a1aa5869d526364c5b61_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mi>Ω</mi><mi>X</mi></mtd> <mtd><mover><mo>⟶</mo><mrow><mi>Ω</mi><mi>c</mi></mrow></mover></mtd> <mtd><mi>Ω</mi><mi>A</mi></mtd> <mtd><mover><mo>⟶</mo><mfrac linethickness='0'><mrow><mtext>connecting</mtext></mrow><mrow><mtext>homomorphism</mtext></mrow></mfrac></mover></mtd> <mtd><mover><mi>X</mi><mo>^</mo></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><mi>hofib</mi><mo stretchy='false'>(</mo><mi>c</mi><mo stretchy='false'>)</mo></mrow></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mi>X</mi></mtd> <mtd><munder><mo>⟶</mo><mi>c</mi></munder></mtd> <mtd><mi>A</mi></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+
+<p><span class='newWikiWord'>some_picture.png<a href='/nlab/files/some_picture.png'>?</a></span></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d95f9c6e6ecdbdcc462d4d9425333f2764ff8131_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mi>Ω</mi><mi>X</mi></mtd> <mtd><mover><mo>⟶</mo><mrow><mi>Ω</mi><mi>c</mi></mrow></mover></mtd> <mtd><mi>Ω</mi><mi>A</mi></mtd> <mtd><mover><mo>⟶</mo><mfrac linethickness='0'><mrow><mtext>connecting</mtext></mrow><mrow><mtext>homomorphism</mtext></mrow></mfrac></mover></mtd> <mtd><mover><mi>X</mi><mo>^</mo></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><mi>hofib</mi><mo stretchy='false'>(</mo><mi>c</mi><mo stretchy='false'>)</mo></mrow></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mi>X</mi></mtd> <mtd><munder><mo>⟶</mo><mi>c</mi></munder></mtd> <mtd><mi>A</mi></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \array{
     \Omega X &amp;\overset{\Omega c}{\longrightarrow}&amp; \Omega A
     &amp;\overset{ \text{connecting} \atop \text{homomorphism} }{\longrightarrow}&amp; \widehat X
@@ -323,7 +359,7 @@ margin-left: 0em;
 <li id='Wellen18'><a class='existingWikiWord' href='/nlab/show/Felix+Wellen'>Felix Wellen</a>, <em><a class='existingWikiWord' href='/schreiber/show/thesis+Wellen'>Cartan Geometry in Modal Homotopy Type Theory</a></em> (<a href='https://arxiv.org/abs/1806.05966'>arXiv:1806.05966</a>, <a href='http://www.math.kit.edu/iag3/~wellen/media/diss.pdf'>thesis pdf</a>)</li>
 </ul>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_959ae3bae1e6ff9583e5a1aa5869d526364c5b61_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><munder><munder><munder><mrow><msubsup><mi>dgcSuperAlg</mi> <mrow><mi>ℝ</mi><mo>,</mo><mo>≥</mo><mn>0</mn><mo>,</mo><mi>proj</mi></mrow> <mi>op</mi></msubsup><mspace width='thickmathspace'></mspace><munder><munder><munder><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>Spec</mi></munder><mover><mo>⟵</mo><mi>𝒪</mi></mover></munderover><mfrac linethickness='0'><mrow><mphantom><mi>A</mi></mphantom></mrow><mrow><mphantom><mi>A</mi></mphantom></mrow></mfrac></munder><mo>⏟</mo></munder><mstyle mathcolor='blue'><mfrac linethickness='0'><mrow><mtext>higher super</mtext></mrow><mrow><mtext>Lie integration</mtext></mrow></mfrac></mstyle></munder><mspace width='thickmathspace'></mspace><mi>Funct</mi><msub><mrow><mo>(</mo><msup><mi>SuperCartSp</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Qu</mi></msub><mo>)</mo></mrow> <mi>loc</mi></msub><mspace width='thickmathspace'></mspace><mover><mover><mover><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>Γ</mi></munder><mover><mo>⟵</mo><mi>const</mi></mover></munderover><mfrac linethickness='0'><mrow><mphantom><mi>A</mi></mphantom></mrow><mrow><mphantom><mi>A</mi></mphantom></mrow></mfrac></mover><mo>⏞</mo></mover><mstyle mathcolor='blue'><mfrac linethickness='0'><mrow><mtext>include </mtext></mrow><mrow><mfrac linethickness='0'><mrow><mtext>geometrically discrete</mtext></mrow><mrow><mtext>∞-groupoids</mtext></mrow></mfrac></mrow></mfrac></mstyle></mover><mspace width='thickmathspace'></mspace><msub><mi>sSet</mi> <mi>Qu</mi></msub></mrow><mfrac linethickness='0'><mrow><mphantom><mi>A</mi></mphantom></mrow><mrow><mphantom><mi>A</mi></mphantom></mrow></mfrac></munder><mo>⏟</mo></munder><mstyle mathcolor='blue'><mtext>Sullivan de Rham adjunction</mtext></mstyle></munder><mspace width='thickmathspace'></mspace><mover><mover><mover><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>≃</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟵</mo><mi>Sing</mi></munder><mover><mo>⟶</mo><mrow><mo stretchy='false'>|</mo><mo>−</mo><mo stretchy='false'>|</mo></mrow></mover></munderover><mfrac linethickness='0'><mrow><mphantom><mi>A</mi></mphantom></mrow><mrow><mphantom><mi>A</mi></mphantom></mrow></mfrac></mover><mo>⏞</mo></mover><mstyle mathcolor='blue'><mfrac linethickness='0'><mrow><mtext>regard ∞-groupoids</mtext></mrow><mrow><mtext>as topological spaces</mtext></mrow></mfrac></mstyle></mover><mspace width='thickmathspace'></mspace><msub><mi>Top</mi> <mi>Qu</mi></msub></mrow><annotation encoding='application/x-tex'>
+<p><math class='maruku-mathml' display='inline' id='mathml_d95f9c6e6ecdbdcc462d4d9425333f2764ff8131_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><munder><munder><munder><mrow><msubsup><mi>dgcSuperAlg</mi> <mrow><mi>ℝ</mi><mo>,</mo><mo>≥</mo><mn>0</mn><mo>,</mo><mi>proj</mi></mrow> <mi>op</mi></msubsup><mspace width='thickmathspace'></mspace><munder><munder><munder><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>Spec</mi></munder><mover><mo>⟵</mo><mi>𝒪</mi></mover></munderover><mfrac linethickness='0'><mrow><mphantom><mi>A</mi></mphantom></mrow><mrow><mphantom><mi>A</mi></mphantom></mrow></mfrac></munder><mo>⏟</mo></munder><mstyle mathcolor='blue'><mfrac linethickness='0'><mrow><mtext>higher super</mtext></mrow><mrow><mtext>Lie integration</mtext></mrow></mfrac></mstyle></munder><mspace width='thickmathspace'></mspace><mi>Funct</mi><msub><mrow><mo>(</mo><msup><mi>SuperCartSp</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Qu</mi></msub><mo>)</mo></mrow> <mi>loc</mi></msub><mspace width='thickmathspace'></mspace><mover><mover><mover><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>Γ</mi></munder><mover><mo>⟵</mo><mi>const</mi></mover></munderover><mfrac linethickness='0'><mrow><mphantom><mi>A</mi></mphantom></mrow><mrow><mphantom><mi>A</mi></mphantom></mrow></mfrac></mover><mo>⏞</mo></mover><mstyle mathcolor='blue'><mfrac linethickness='0'><mrow><mtext>include </mtext></mrow><mrow><mfrac linethickness='0'><mrow><mtext>geometrically discrete</mtext></mrow><mrow><mtext>∞-groupoids</mtext></mrow></mfrac></mrow></mfrac></mstyle></mover><mspace width='thickmathspace'></mspace><msub><mi>sSet</mi> <mi>Qu</mi></msub></mrow><mfrac linethickness='0'><mrow><mphantom><mi>A</mi></mphantom></mrow><mrow><mphantom><mi>A</mi></mphantom></mrow></mfrac></munder><mo>⏟</mo></munder><mstyle mathcolor='blue'><mtext>Sullivan de Rham adjunction</mtext></mstyle></munder><mspace width='thickmathspace'></mspace><mover><mover><mover><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>≃</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟵</mo><mi>Sing</mi></munder><mover><mo>⟶</mo><mrow><mo stretchy='false'>|</mo><mo>−</mo><mo stretchy='false'>|</mo></mrow></mover></munderover><mfrac linethickness='0'><mrow><mphantom><mi>A</mi></mphantom></mrow><mrow><mphantom><mi>A</mi></mphantom></mrow></mfrac></mover><mo>⏞</mo></mover><mstyle mathcolor='blue'><mfrac linethickness='0'><mrow><mtext>regard ∞-groupoids</mtext></mrow><mrow><mtext>as topological spaces</mtext></mrow></mfrac></mstyle></mover><mspace width='thickmathspace'></mspace><msub><mi>Top</mi> <mi>Qu</mi></msub></mrow><annotation encoding='application/x-tex'>
   \underset{ 
      \color{blue} \text{Sullivan de Rham adjunction}
   }{
@@ -398,14 +434,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on August  3, 2018 at 06:57:00.
+  Last revised on August  3, 2018 at 14:07:39.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1629" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1629 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1630" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1630 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
