--- a/pages/3624.html
+++ b/pages/3624.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1533109147" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1533108238" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8817/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,37 +307,45 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#pseudointerior_of_'>Pseudo-interior of <math class='maruku-mathml' display='inline' id='mathml_e31633edfd6dfb09ab1fd246d3099e7df6cc7fdb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Q</mi></mrow><annotation encoding='application/x-tex'>Q</annotation></semantics></math></a></li><li><a href='#properties'>Properties</a></li><li><a href='#references'>References</a></li></ul></div>
+      <h1 id='contents'>Contents</h1>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#definition'>Definition</a></li>
+<li><a href='#pseudointerior_of_'>Pseudo-interior of <math class='maruku-mathml' display='inline' id='mathml_2997b572f2fc9af20a7bb7c1b2a532d98736dd8e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Q</mi></mrow><annotation encoding='application/x-tex'>Q</annotation></semantics></math></a></li>
+<li><a href='#properties'>Properties</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id='definition'>Definition</h2>
 
 <p>The Hilbert cube is the product:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e31633edfd6dfb09ab1fd246d3099e7df6cc7fdb_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>n</mi></munder><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mfrac><mn>1</mn><mi>n</mi></mfrac><mo stretchy='false'>]</mo><mo>≅</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>n</mi></munder><mo stretchy='false'>[</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mfrac><mn>1</mn><mi>n</mi></mfrac><mo>,</mo><mfrac><mn>1</mn><mi>n</mi></mfrac><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>\prod_n [0,\frac{1}{n}]\cong\prod_n [-\frac{1}{n},\frac{1}{n}] </annotation></semantics></math></div>
-<p>It is a <a class='existingWikiWord' href='/nlab/show/compactum'>compact</a> <a class='existingWikiWord' href='/nlab/show/metrisable+topological+space'>metrizable space</a>. It is variously denoted by <math class='maruku-mathml' display='inline' id='mathml_e31633edfd6dfb09ab1fd246d3099e7df6cc7fdb_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Q</mi></mrow><annotation encoding='application/x-tex'>Q</annotation></semantics></math> or <math class='maruku-mathml' display='inline' id='mathml_e31633edfd6dfb09ab1fd246d3099e7df6cc7fdb_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>I</mi> <mi>ω</mi></msup></mrow><annotation encoding='application/x-tex'>I^\omega</annotation></semantics></math>.</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2997b572f2fc9af20a7bb7c1b2a532d98736dd8e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>n</mi></munder><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mfrac><mn>1</mn><mi>n</mi></mfrac><mo stretchy='false'>]</mo><mo>≅</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>n</mi></munder><mo stretchy='false'>[</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mfrac><mn>1</mn><mi>n</mi></mfrac><mo>,</mo><mfrac><mn>1</mn><mi>n</mi></mfrac><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>\prod_n [0,\frac{1}{n}]\cong\prod_n [-\frac{1}{n},\frac{1}{n}] </annotation></semantics></math></div>
+<p>It is a <a class='existingWikiWord' href='/nlab/show/compactum'>compact</a> <a class='existingWikiWord' href='/nlab/show/metrizable+space'>metrizable space</a> under the sup norm, where the metric topology equals the product topology (as is easily seen). It is variously denoted by <math class='maruku-mathml' display='inline' id='mathml_2997b572f2fc9af20a7bb7c1b2a532d98736dd8e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Q</mi></mrow><annotation encoding='application/x-tex'>Q</annotation></semantics></math> or <math class='maruku-mathml' display='inline' id='mathml_2997b572f2fc9af20a7bb7c1b2a532d98736dd8e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>I</mi> <mi>ω</mi></msup></mrow><annotation encoding='application/x-tex'>I^\omega</annotation></semantics></math>.</p>
 
 <p>It plays a central role in <a class='existingWikiWord' href='/nlab/show/Borsuk%27s+shape+theory'>Borsuk&#39;s shape theory</a>, and is the basis for the construction of Hilbert cube manifolds. The theory of these were developed by Tom Chapman (mid 1970s) and were used in his proof of the topological invariance of <a class='existingWikiWord' href='/nlab/show/Whitehead+torsion'>Whitehead torsion</a>.</p>
 
-<h2 id='pseudointerior_of_'>Pseudo-interior of <math class='maruku-mathml' display='inline' id='mathml_e31633edfd6dfb09ab1fd246d3099e7df6cc7fdb_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Q</mi></mrow><annotation encoding='application/x-tex'>Q</annotation></semantics></math></h2>
+<h2 id='pseudointerior_of_'>Pseudo-interior of <math class='maruku-mathml' display='inline' id='mathml_2997b572f2fc9af20a7bb7c1b2a532d98736dd8e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Q</mi></mrow><annotation encoding='application/x-tex'>Q</annotation></semantics></math></h2>
 
 <p>It has an important subspace known as its <em>pseudo-interior</em>. This is the product of the corresponding open intervals,</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e31633edfd6dfb09ab1fd246d3099e7df6cc7fdb_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi><mo>=</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>n</mi></munder><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mfrac><mn>1</mn><mi>n</mi></mfrac><mo>,</mo><mfrac><mn>1</mn><mi>n</mi></mfrac><mo stretchy='false'>)</mo><mo>.</mo></mrow><annotation encoding='application/x-tex'>s= \prod_n (-\frac{1}{n},\frac{1}{n}).</annotation></semantics></math></div>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2997b572f2fc9af20a7bb7c1b2a532d98736dd8e_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi><mo>=</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∏</mo> <mi>n</mi></munder><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mfrac><mn>1</mn><mi>n</mi></mfrac><mo>,</mo><mfrac><mn>1</mn><mi>n</mi></mfrac><mo stretchy='false'>)</mo><mo>.</mo></mrow><annotation encoding='application/x-tex'>s= \prod_n (-\frac{1}{n},\frac{1}{n}).</annotation></semantics></math></div>
 <p>This plays an essential role in the <a class='existingWikiWord' href='/nlab/show/shape+theory'>Chapman complement theorem</a>.</p>
 
 <h2 id='properties'>Properties</h2>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_e31633edfd6dfb09ab1fd246d3099e7df6cc7fdb_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Q</mi></mrow><annotation encoding='application/x-tex'>Q</annotation></semantics></math> be the Hilbert cube.</p>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_2997b572f2fc9af20a7bb7c1b2a532d98736dd8e_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Q</mi></mrow><annotation encoding='application/x-tex'>Q</annotation></semantics></math> be the Hilbert cube.</p>
 
 <ul>
 <li>
-<p>A space is <a class='existingWikiWord' href='/nlab/show/second-countable+space'>second countable</a> (has a countable <a class='existingWikiWord' href='/nlab/show/basis'>basis</a>) and <math class='maruku-mathml' display='inline' id='mathml_e31633edfd6dfb09ab1fd246d3099e7df6cc7fdb_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mn>4</mn></msub></mrow><annotation encoding='application/x-tex'>T_4</annotation></semantics></math> (is <a class='existingWikiWord' href='/nlab/show/separation+axioms'>normal and Hausdorff</a>) if and only if it is homeomorphic to a <a class='existingWikiWord' href='/nlab/show/subspace'>subspace</a> of <math class='maruku-mathml' display='inline' id='mathml_e31633edfd6dfb09ab1fd246d3099e7df6cc7fdb_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Q</mi></mrow><annotation encoding='application/x-tex'>Q</annotation></semantics></math>.</p>
+<p>A space is <a class='existingWikiWord' href='/nlab/show/second+countable+space'>second countable</a> (has a countable <a class='existingWikiWord' href='/nlab/show/basis'>basis</a>) and <math class='maruku-mathml' display='inline' id='mathml_2997b572f2fc9af20a7bb7c1b2a532d98736dd8e_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mn>4</mn></msub></mrow><annotation encoding='application/x-tex'>T_4</annotation></semantics></math> (is <a class='existingWikiWord' href='/nlab/show/separation+axioms'>normal and Hausdorff</a>) if and only if it is homeomorphic to a <a class='existingWikiWord' href='/nlab/show/subspace'>subspace</a> of <math class='maruku-mathml' display='inline' id='mathml_2997b572f2fc9af20a7bb7c1b2a532d98736dd8e_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Q</mi></mrow><annotation encoding='application/x-tex'>Q</annotation></semantics></math>.</p>
 </li>
 
 <li>
-<p>A <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a> is <a class='existingWikiWord' href='/nlab/show/Polish+space'>Polish</a> if and only if it is homeomorphic to a <math class='maruku-mathml' display='inline' id='mathml_e31633edfd6dfb09ab1fd246d3099e7df6cc7fdb_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mi>δ</mi></msub></mrow><annotation encoding='application/x-tex'>G_\delta</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/G-delta+subspace'>subset</a> of <math class='maruku-mathml' display='inline' id='mathml_e31633edfd6dfb09ab1fd246d3099e7df6cc7fdb_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Q</mi></mrow><annotation encoding='application/x-tex'>Q</annotation></semantics></math>.</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a> is <a class='existingWikiWord' href='/nlab/show/Polish+space'>Polish</a> if and only if it is homeomorphic to a <math class='maruku-mathml' display='inline' id='mathml_2997b572f2fc9af20a7bb7c1b2a532d98736dd8e_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mi>δ</mi></msub></mrow><annotation encoding='application/x-tex'>G_\delta</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/G-delta+subset'>subset</a> of <math class='maruku-mathml' display='inline' id='mathml_2997b572f2fc9af20a7bb7c1b2a532d98736dd8e_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Q</mi></mrow><annotation encoding='application/x-tex'>Q</annotation></semantics></math>.</p>
 </li>
 
 <li>
-<p>The Hilbert cube has some counterintuitive properties, such as the fact that it is a <a class='existingWikiWord' href='/nlab/show/homogeneous+space'>homogeneous space</a> (i.e., the group of self-homeomorphisms <math class='maruku-mathml' display='inline' id='mathml_e31633edfd6dfb09ab1fd246d3099e7df6cc7fdb_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Aut</mi><mo stretchy='false'>(</mo><mi>Q</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Aut(Q)</annotation></semantics></math> acts transitively on <math class='maruku-mathml' display='inline' id='mathml_e31633edfd6dfb09ab1fd246d3099e7df6cc7fdb_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Q</mi></mrow><annotation encoding='application/x-tex'>Q</annotation></semantics></math>), even though it seems to have a “boundary”. See <a href='#HW'>Halverson and Wright</a> for some explicit constructions.</p>
+<p>The Hilbert cube has some counterintuitive properties, such as the fact that it is a <a class='existingWikiWord' href='/nlab/show/homogeneous+space'>homogeneous space</a> (i.e., the group of self-homeomorphisms <math class='maruku-mathml' display='inline' id='mathml_2997b572f2fc9af20a7bb7c1b2a532d98736dd8e_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Aut</mi><mo stretchy='false'>(</mo><mi>Q</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Aut(Q)</annotation></semantics></math> acts transitively on <math class='maruku-mathml' display='inline' id='mathml_2997b572f2fc9af20a7bb7c1b2a532d98736dd8e_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Q</mi></mrow><annotation encoding='application/x-tex'>Q</annotation></semantics></math>), even though it seems to have a “boundary”. See <a href='#HW'>Halverson and Wright</a> for some explicit constructions.</p>
 </li>
 </ul>
 
@@ -357,26 +364,23 @@ margin-left: 0em;
 <p>Denise M. Halverson, David G. Wright, <em>The Homogeneous Property of the Hilbert Cube</em>, <a href='http://arxiv.org/pdf/1211.1363v1.pdf'>http://arxiv.org/pdf/1211.1363v1.pdf</a></p>
 </li>
 </ul>
-
-<p>
- 
-</p>
 </div>
 
 <div class="revisedby">
-  Revised on May 23, 2017 11:43:29 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (51.9.254.136)
+  <p>
+  Last revised on August  3, 2018 at 15:54:47.
+  See the <a href="https://ncatlab.org/nlab/history/Hilbert cube" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Hilbert+cube" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Hilbert+cube/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Hilbert+cube" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Hilbert+cube" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Hilbert+cube" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Hilbert+cube/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Hilbert+cube" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Hilbert+cube" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Hilbert cube/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Hilbert+cube" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Hilbert+cube" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Hilbert+cube" id="view_source" rel="nofollow">Source</a>
